welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  if (a!=b) {
    return 0
  } else {
    if (a!=c) {
      return 0
    } else {
      if (b!=c) {
        return 0
      } else {
        if (a==b & b==c) {
          return 20
        } else {
          if (a==b) {
            return 10
          } else {
            if (a==c) {
              return 10
            } else {
              if (b==c) {
                return 10
              }
            }
          }
        }
      }
    }
  }
}